[project]
name = "llmgrep-cli"
version = "0.2.2"
description = "grep, but the search engine is an LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx"]

[project.scripts]
llmgrep = "llmgrep:main"

[project.urls]
Repository = "https://github.com/mefengl/llmgrep"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmgrep"]
