[project]
name = "vibegrep"
version = "0.3.0"
description = "grep, but the search engine is an LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx"]

[project.scripts]
vibegrep = "vibegrep:main"

[project.urls]
Repository = "https://github.com/mefengl/vibegrep"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibegrep"]
